BUILD - 51-2309-mondial-rugby - v0.0.0-stable-26 - fix footer dark mode

--- a/src/apps/Footer/styles.scss
+++ b/src/apps/Footer/styles.scss
@@ -111,7 +111,11 @@
 
       @media (prefers-color-scheme: dark) {
         color: #fff !important;
-        border: 1px solid #fff;
+        border: 1px solid #ffffff4D;
+
+        ul li a::after {
+          background-image: url("https://assets-decodeurs.lemonde.fr/redacweb/51-2309-mondial-rugby/arrow-right-white.svg");
+        }
       }
     }
   }
